# pdf-rag-chatbot

./: README.md
backend/: pyproject.toml
frontend/: package.json
